# android-samples

./: .gitignore  README.MD  README.md
Lection03/presentation/: Лекция 03 - Ресурсы, View и xml верстка.pptx
Lection05/: settings.gradle
Lesson06/: build.gradle  settings.gradle
Lesson06/app/: build.gradle
compose/: build.gradle  local.properties
compose/app/: build.gradle
coroutines/: settings.gradle
coroutines/app/: build.gradle
lection 03/lection_03/: settings.gradle.kts
lection 04/lection_04/: README.md  settings.gradle.kts
lection02/: .gitignore  CI.md  README.md  detekt  detekt.bat  ktlint  ktlint.bat  local.properties  settings.gradle
lection02/app/: build.gradle
lection02/app_java/: build.gradle
lection02/app_kotlin/: build.gradle
lection03/: settings.gradle
lection03/app/: build.gradle
lection03/app_java/: build.gradle
lection03/app_kotlin/: build.gradle
lection04/: .gitignore  build.gradle  settings.gradle
lection04/app/: build.gradle  google-services.json
lection04/app_java/: build.gradle
lection04/app_kotlin/: build.gradle
lection05/: README.MD  build.gradle  settings.gradle
lection05/app/: build.gradle
lection05/code/: build.gradle.kts  (+1 more)
lection06/: build.gradle  settings.gradle
lection07/: settings.gradle
lection07_pre/: settings.gradle
lection08/: build.gradle  settings.gradle
lection09/: build.gradle  settings.gradle
lection10/: README.MD  build.gradle  settings.gradle
lecture08/: settings.gradle
lesson09_missing_parts/code/app/src/main/cpp/: CMakeLists.txt  native-lib-second.cpp  native-lib.cpp
(+1342 files in other folders)
